--- a/package.json
+++ b/package.json
@@ -1,20 +1,23 @@
 {
-  "name": "chat-app-front-end",
+  "name": "websockets-front-end",
   "version": "1.0.0",
-  "description": "",
   "source": "src/index.html",
   "scripts": {
     "start": "parcel --no-cache",
     "build": "rm -rf dist && parcel build"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "devDependencies": {
-    "parcel": "^2.10.3"
+    "parcel": "^2.10.3",
+    "process": "^0.11.10"
   },
   "dependencies": {
     "bootstrap": "^5.3.2",
+    "bootstrap-icons": "^1.11.1",
     "firebase": "^10.7.1"
-  }
+  },
+  "main": "index.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
